# gutendexer

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mongo-init.js  pyproject.toml  requirements.txt
gutendexer/: Config.py  main.py
gutendexer/crud/: books.py  utils.py
gutendexer/routes/: books.py  dependencies.py
gutendexer/schemas/: book.py  review.py
gutendexer/tests/: conftest.py
gutendexer/tests/routes/: test_books.py
