[tool.poetry]
name = "gutendexer"
version = "0.1.0"
description = ""
authors = ["Georgios Lampropoulos"]
license = "MIT"
readme = "README.md"
packages = [{include = "gutendexer"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.85.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
