[tool.poetry]
name = "gutendexer"
version = "0.1.0"
description = ""
authors = ["Georgios Lampropoulos"]
license = "MIT"
readme = "README.md"
packages = [{include = "gutendexer"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.85.1"}
motor = "^3.0.0"
tornado = "^6.2"
aiohttp = "^3.8.3"
pytest = "^7.1.3"
pytest-asyncio = "^0.20.1"
httpx = "^0.23.0"
trio = "^0.22.0"
mock = "^4.0.3"
nest-asyncio = "^1.5.6"
aioresponses = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
